--- a/index.ipynb
+++ b/index.ipynb
@@ -201,7 +201,7 @@
    "outputs": [],
    "source": [
     "def restaurant_name(restaurant):\n",
-    "    restaurant.values()['']\n",
+    "    restaurant.values()['name']\n",
     "    pass"
    ]
   },
