--- a/index.ipynb
+++ b/index.ipynb
@@ -324,7 +324,7 @@
    "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    for \n",
+    "    for tr\n",
     "    restaurant == alternative\n",
     "    pass"
    ]
