--- a/index.ipynb
+++ b/index.ipynb
@@ -325,7 +325,8 @@
    "source": [
     "def is_better(restaurant, alternative):\n",
     "    restaurant['rating'] == alternative['rating']\n",
-    "    \n",
+    "    restaurant['rating'] == alternative['rating']\n",
+    "    restaurant['rating'] == alternative['rating']\n",
     "    pass"
    ]
   },
