--- a/index.ipynb
+++ b/index.ipynb
@@ -325,6 +325,7 @@
    "source": [
     "def is_better(restaurant, alternative):\n",
     "    restaurant['rating'] == alternative['rating']\n",
+    "    return \n",
     "    restaurant['rating'] == alternative['rating']\n",
     "    restaurant['rating'] == alternative['rating']\n",
     "    pass"
