Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -324,8 +324,8 @@
    "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    restaurant['rating']  alternative['rating']\n",
-    "    return \n",
+    "    restaurant['rating'] > alternative['rating']\n",
+    "    return True\n",
     "    restaurant['rating'] == alternative['rating']\n",
     "    restaurant['rating'] == alternative['rating']\n",
     "    pass"
