Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -326,7 +326,8 @@
     "def is_better(restaurant, alternative):\n",
     "    restaurant['rating'] > alternative['rating']\n",
     "    return True\n",
-    "    restaurant['rating'] == alternative['rating']\n",
+    "    restaurant['rating'] < alternative['rating']\n",
+    "    reu\n",
     "    restaurant['rating'] == alternative['rating']\n",
     "    pass"
    ]
