Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -327,8 +327,9 @@
     "    restaurant['rating'] > alternative['rating']\n",
     "    return True\n",
     "    restaurant['rating'] < alternative['rating']\n",
-    "    reu\n",
+    "    return False\n",
     "    restaurant['rating'] == alternative['rating']\n",
+    "    return False\n",
     "    pass"
    ]
   },
