Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -324,7 +324,7 @@
    "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    restaurant['rating'] > alternative['rating']\n",
+    "    for restaurant['rating'] > alternative['rating']:\n",
     "    return True\n",
     "    restaurant['rating'] < alternative['rating']\n",
     "    return False\n",
