Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -319,13 +319,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-18-fb2c5520dda5>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-18-fb2c5520dda5>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    for restaurant['rating'] > alternative['rating']:\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def is_better(restaurant, alternative):\n",
     "    for restaurant['rating'] > alternative['rating']:\n",
-    "    return True\n",
+    "        return True\n",
     "    restaurant['rating'] < alternative['rating']\n",
     "    return False\n",
     "    restaurant['rating'] == alternative['rating']\n",
