Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -333,7 +333,7 @@
    ],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    for restaurant['rating'] > alternative['rating']:\n",
+    "    if restaurant['rating'] > alternative['rating']:\n",
     "        return True\n",
     "    restaurant['rating'] < alternative['rating']\n",
     "    return False\n",
