Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -335,8 +335,8 @@
     "def is_better(restaurant, alternative):\n",
     "    if restaurant['rating'] > alternative['rating']:\n",
     "        return True\n",
-    "    restaurant['rating'] < alternative['rating']\n",
-    "    return False\n",
+    "        if restaurant['rating'] < alternative['rating']:\n",
+    "        return False\n",
     "    restaurant['rating'] == alternative['rating']\n",
     "    return False\n",
     "    pass"
