--- a/index.ipynb
+++ b/index.ipynb
@@ -335,7 +335,7 @@
     "def is_better(restaurant, alternative):\n",
     "    if restaurant['rating'] > alternative['rating']:\n",
     "        return True\n",
-    "        if restaurant['rating'] < alternative['rating']:\n",
+    "        else restaurant['rating'] < alternative['rating']:\n",
     "        return False\n",
     "    restaurant['rating'] == alternative['rating']\n",
     "    return False\n",
