--- a/index.ipynb
+++ b/index.ipynb
@@ -337,8 +337,8 @@
     "        return True\n",
     "        elif restaurant['rating'] < alternative['rating']:\n",
     "            return False\n",
-    "                restaurant['rating'] == alternative['rating']\n",
-    "    return False\n",
+    "               else\n",
+    "                    return False\n",
     "    pass"
    ]
   },
