--- a/index.ipynb
+++ b/index.ipynb
@@ -319,24 +319,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-20-97b85146e81d>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-97b85146e81d>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    else\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
     "    if restaurant['rating'] > alternative['rating']:\n",
     "        return True\n",
-    "    else\n",
-    "            return False\n",
+    "    else:\n",
+    "        return False\n",
     "    pass"
    ]
   },
