--- a/index.ipynb
+++ b/index.ipynb
@@ -493,6 +493,7 @@
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
+    "    if restaura\n",
     "    pass"
    ]
   },
