Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -488,13 +488,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
     "    if restaurant['rating'] > rating:\n",
-    "        return Tr\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
     "    pass"
    ]
   },
